[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button1" type="Button" parent="."]
margin_left = 83.0
margin_top = 97.0
margin_right = 249.0
margin_bottom = 149.0

[node name="Button2" type="Button" parent="."]
margin_left = 387.0
margin_top = 98.0
margin_right = 560.0
margin_bottom = 151.0

[node name="Button3" type="Button" parent="."]
margin_left = 698.0
margin_top = 101.0
margin_right = 841.0
margin_bottom = 154.0

[node name="LineEdit1" type="LineEdit" parent="."]
margin_left = 182.0
margin_top = 66.0
margin_right = 308.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="."]
margin_left = 358.0
margin_top = 170.0
margin_right = 513.0
margin_bottom = 230.0

[node name="Label2" type="Label" parent="."]
margin_left = 693.0
margin_top = 165.0
margin_right = 848.0
margin_bottom = 225.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 215.0
margin_top = 44.0
margin_right = 278.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 43, 71 )
text = "numero"

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 32.0
margin_top = 64.0
margin_right = 158.0
margin_bottom = 89.0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 66.0
margin_top = 45.0
margin_right = 129.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 43, 71 )
text = "nome"

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
